--- a/_posts/2021-08-20-a-5-step-recipe-for-tuning-the-model-steady-state/the-constant-reproduction-trick.Rmd
+++ b/_posts/2021-08-20-a-5-step-recipe-for-tuning-the-model-steady-state/the-constant-reproduction-trick.Rmd
@@ -67,7 +67,7 @@ Some of the functions we will be using are still in active development in the
 Therefore we will always want to make sure we are loading the latest version of
 the package with
 
-```{r}
+```{r message=FALSE}
 remotes::install_github("SamikDatta/mizerExperimental", ref = )
 library(mizerExperimental)
 ```
@@ -87,8 +87,8 @@ species_params$b <- c(3.014, 3.320, 2.941, 3.429, 2.986, 3.080, 3.019, 3.198,
                          3.101, 3.160, 3.173, 3.075)
 
 years <- getTimes(NS_sim) >= 1990 & getTimes(NS_sim) <= 2010
-# Average biomass above w_mat/20
-bm_hist <- getBiomass(NS_sim, min_w = species_params$w_mat / 20)[years, ]
+# Average biomass over those 21 years
+bm_hist <- getBiomass(NS_sim)[years, ]
 species_params$biomass_observed <-  colSums(bm_hist) / 21
 
 library(knitr)
