--- a/_posts/2021-08-20-a-5-step-recipe-for-tuning-the-model-steady-state/the-constant-reproduction-trick.Rmd
+++ b/_posts/2021-08-20-a-5-step-recipe-for-tuning-the-model-steady-state/the-constant-reproduction-trick.Rmd
@@ -69,7 +69,7 @@ the package with
 
 ```{r message=FALSE}
 
-remotes::install_github("mizerExperimental")
+remotes::install_github("sizespectrum/mizerExperimental")
 library(mizerExperimental)
 ```
 
@@ -239,7 +239,7 @@ plotBiomass(sim)
 But how do these biomasses compare to our observed biomasses?
 
 ```{r}
-plotBiomassObservedVsModel(params)
+plotlyBiomassObservedVsModel(params)
 ```
 They don't agree at all, but that is no surprise. It would actually have been 
 quite a coincidence if they did agree, because the `newMultispeciesParams()`
@@ -252,7 +252,7 @@ with the total observed biomass.
 
 ```{r, preview=TRUE}
 params <- calibrateBiomass(params) 
-plotBiomassObservedVsModel(params)
+plotlyBiomassObservedVsModel(params)
 ```
 So now the total biomass is correct, but for some species the biomass in the
 model is too high, for others it is too low. 
@@ -276,7 +276,7 @@ In fact, it has raised and lowered the spectra by exactly the factor needed
 to get the model biomasses to match the observed biomasses.
 
 ```{r}
-plotBiomassObservedVsModel(params)
+plotlyBiomassObservedVsModel(params)
 ```
 
 Of course this is not the end of the story, because just rescaling the size
@@ -287,7 +287,7 @@ steady state.
 
 ```{r}
 params <- steady(params)
-plotBiomassObservedVsModel(params)
+plotlyBiomassObservedVsModel(params)
 ```
 
 This has now spoiled the agreement between observed and model biomasses. But
@@ -295,7 +295,7 @@ we can simply calibrate and match again and run to steady state again.
 
 ```{r}
 params <- params |> calibrateBiomass() |> matchBiomasses() |> steady()
-plotBiomassObservedVsModel(params)
+plotlyBiomassObservedVsModel(params)
 ```
 
 The discrepancies are now quite small. We could iterate to get them even
@@ -304,7 +304,7 @@ smaller:
 ```{r}
 params <- params |> calibrateBiomass() |> matchBiomasses() |> steady() |>
     calibrateBiomass() |> matchBiomasses() |> steady()
-plotBiomassObservedVsModel(params)
+plotlyBiomassObservedVsModel(params)
 ```
 
 So here is the picture of the steady state that matches the observed biomasses:
