--- a/_posts/2021-08-20-a-5-step-recipe-for-tuning-the-model-steady-state/the-constant-reproduction-trick.Rmd
+++ b/_posts/2021-08-20-a-5-step-recipe-for-tuning-the-model-steady-state/the-constant-reproduction-trick.Rmd
@@ -67,7 +67,8 @@ Some of the functions we will be using are still in active development in the
 Therefore we will always want to make sure we are loading the latest version of
 the package with
 
-```{r}
+```{r message=FALSE}
+
 remotes::install_github("sizespectrum/mizerExperimental")
 library(mizerExperimental)
 ```
@@ -87,8 +88,8 @@ species_params$b <- c(3.014, 3.320, 2.941, 3.429, 2.986, 3.080, 3.019, 3.198,
                          3.101, 3.160, 3.173, 3.075)
 
 years <- getTimes(NS_sim) >= 1990 & getTimes(NS_sim) <= 2010
-# Average biomass above w_mat/20
-bm_hist <- getBiomass(NS_sim, min_w = species_params$w_mat / 20)[years, ]
+# Average biomass over those 21 years
+bm_hist <- getBiomass(NS_sim)[years, ]
 species_params$biomass_observed <-  colSums(bm_hist) / 21
 
 library(knitr)
@@ -238,7 +239,7 @@ plotBiomass(sim)
 But how do these biomasses compare to our observed biomasses?
 
 ```{r}
-plotBiomassVsSpecies(params)
+plotlyBiomassObservedVsModel(params)
 ```
 They don't agree at all, but that is no surprise. It would actually have been 
 quite a coincidence if they did agree, because the `newMultispeciesParams()`
@@ -251,7 +252,7 @@ with the total observed biomass.
 
 ```{r, preview=TRUE}
 params <- calibrateBiomass(params) 
-plotBiomassVsSpecies(params)
+plotlyBiomassObservedVsModel(params)
 ```
 So now the total biomass is correct, but for some species the biomass in the
 model is too high, for others it is too low. 
@@ -275,7 +276,7 @@ In fact, it has raised and lowered the spectra by exactly the factor needed
 to get the model biomasses to match the observed biomasses.
 
 ```{r}
-plotBiomassVsSpecies(params)
+plotlyBiomassObservedVsModel(params)
 ```
 
 Of course this is not the end of the story, because just rescaling the size
@@ -286,7 +287,7 @@ steady state.
 
 ```{r}
 params <- steady(params)
-plotBiomassVsSpecies(params)
+plotlyBiomassObservedVsModel(params)
 ```
 
 This has now spoiled the agreement between observed and model biomasses. But
@@ -294,7 +295,7 @@ we can simply calibrate and match again and run to steady state again.
 
 ```{r}
 params <- params |> calibrateBiomass() |> matchBiomasses() |> steady()
-plotBiomassVsSpecies(params)
+plotlyBiomassObservedVsModel(params)
 ```
 
 The discrepancies are now quite small. We could iterate to get them even
@@ -303,7 +304,7 @@ smaller:
 ```{r}
 params <- params |> calibrateBiomass() |> matchBiomasses() |> steady() |>
     calibrateBiomass() |> matchBiomasses() |> steady()
-plotBiomassVsSpecies(params)
+plotlyBiomassObservedVsModel(params)
 ```
 
 So here is the picture of the steady state that matches the observed biomasses:
