--- a/_posts/2022-07-11-thermizer/thermizer.Rmd
+++ b/_posts/2022-07-11-thermizer/thermizer.Rmd
@@ -25,9 +25,9 @@ therMizer models the effects of temperature on individuals' aerobic scope and me
 
 The relationship between aerobic scope and temperature is a somewhat left-skewed distribution with a thermal optimum and upper and lower thermal tolerance limits. [Pörtner and Peck (2010)](https://doi.org/10.1111/j.1095-8649.2010.02783.x) provide an overview of this relationship and [Pörtner (2012)](https://doi.org/10.3354/meps10123) discusses open questions related to temperature and physiology. The exact nature of the relationship between aerobic scope and temperature varies by species and requires a fair bit of physiological research to establish. Therefore, it is generally necessary to approximate this relationship, which is what therMizer does. A generic polynomial rate equation is used to approximate the effect of temperature on aerobic scope, *s*: $$
 \begin{align}
-s = T(T_{max} - T)(T - T_{min}) && \text{(1)}
+s = T(T_{max} - T)(T - T_{min})^\frac{1}{2} && \text{(1)}
 \end{align}
-$$ where *T* is the temperature to which a fish is exposed and $T_{max}$ and $T_{min}$ are the species' upper and lower thermal tolerance limits, respectively ([van der Heide et al. 2010](https://doi.org/10.1016/j.aquabot.2005.09.004)). All temperatures in eq. (1) are in degrees Celsius. The result of this expression varies considerably given a species' thermal tolerance limits. Therefore, it is necessary to scale this value across all modeled species so that it equals a value ranging from 0 -- 1. This is done by dividing by the maximum value over each species' thermal range ([Woodworth-Jefcoats et al. 2019](https://www.frontiersin.org/articles/10.3389/fmars.2019.00383/full)). therMizer will take care of this scaling for you.
+$$ where *T* is the temperature to which a fish is exposed and $T_{max}$ and $T_{min}$ are the species' upper and lower thermal tolerance limits, respectively ([Briere et al. 1999](https://academic.oup.com/ee/article/28/1/22/501436), [van der Heide et al. 2010](https://doi.org/10.1016/j.aquabot.2005.09.004)). All temperatures in eq. (1) are in degrees Celsius. The result of this expression varies considerably given a species' thermal tolerance limits. Therefore, it is necessary to scale this value across all modeled species so that it equals a value ranging from 0 -- 1. This is done by dividing by the maximum value over each species' thermal range ([Woodworth-Jefcoats et al. 2019](https://www.frontiersin.org/articles/10.3389/fmars.2019.00383/full)). therMizer will take care of this scaling for you.
 
 The scaled value is then used as a multiplier for encounter rate and predation rate in mizer. The scaling is applied to encounter rate as proxy for foraging movement. The resulting temperature effect is such that when species are at their thermal optima they realize peak aerobic performance and encounter the maximum amount of prey possible. This ability diminishes to either side of the optimum and reaches zero outside species' thermal tolerance limits. The scaling is applied to predation rate to ensure encountered prey are predated upon.
 
@@ -103,14 +103,14 @@ for (indv in seq(1:length(species_params(params)$temp_min))) {
     # Create a vector of all temperatures each species might encounter
     temperature <- seq(species_params(params)$temp_min[indv], 
                        species_params(params)$temp_max[indv], 
-                       by = 0.1)
+                       by = 0.1) + 273
     
     # Find the maximum value of the unscaled effect of temperature on encounter
     # and predation rate for each species 
 	species_params(params)$encounterpred_scale[indv] <- 
 	    max((temperature) * 
-	            (temperature - species_params(params)$temp_min[indv]) *
-	            (species_params(params)$temp_max[indv] - temperature)
+	            (temperature - (species_params(params)$temp_min[indv] + 273)) *
+	            ((species_params(params)$temp_max[indv] + 273) - temperature)^(1/2)
 	        )
 }
 
@@ -134,12 +134,12 @@ Then, we can add code to scale encounter rate and predation rate based on the te
 # predation rate
 scaled_temp_effect <- function(t) {
     # Using t+1 to avoid calling ocean_temp[0,] at the first time step
-    temp_at_t <- other_params(params)$ocean_temp[t + 1,]
+    temp_at_t <- other_params(params)$ocean_temp[t + 1,] + 273
     
     # Calculate unscaled temperature effect using a generic polynomial rate equation
     unscaled_temp_effect <- 
-        temp_at_t * (temp_at_t - species_params(params)$temp_min) * 
-        (species_params(params)$temp_max - temp_at_t)
+        temp_at_t * (temp_at_t - (species_params(params)$temp_min + 273)) * 
+        ((species_params(params)$temp_max + 273) - temp_at_t)^(1/2)
     
     # Scale using new parameter
     scaled_temp_effect <- 
@@ -147,8 +147,8 @@ scaled_temp_effect <- function(t) {
     
     # Set temperature effect to 0 if temperatures are outside thermal 
     # tolerance limits
-    above_max <- temp_at_t > species_params(params)$temp_max
-    below_min <- temp_at_t < species_params(params)$temp_min
+    above_max <- (temp_at_t - 273) > species_params(params)$temp_max
+    below_min <- (temp_at_t - 273) < species_params(params)$temp_min
     scaled_temp_effect[above_max | below_min] = 0
     
     scaled_temp_effect
@@ -232,11 +232,13 @@ Many fish undergo ontogentic migration, spending different life stages at differ
 
 ## Acknowledgements
 
-This blog post was compiled with mizer version 2.3.0.1 and R version 4.2.1. Many thanks to Gustav Delius for guidance on mizer's inner workings and writing better code.
+This blog post was compiled with mizer version 2.3.0.1 and R version 4.2.1. Many thanks to Gustav Delius for guidance on mizer's inner workings and writing better code. Thank you also to Romain Forestier for insight on working with temperatures below 0$^\circ$.
 
 ## References
 
-Boettiger, C., Lang, D. T., and Wainwright, P. C. (2012). rfishbase: exploring, manipulating, and visualizaing FishBase from R. Journal of Fish Biology 81, 2030--2039. <https://doi.org/10.1111/j.1095-8649.2012.03464.x>
+Boettiger C, Lang DT, Wainwright PC. (2012) rfishbase: exploring, manipulating, and visualizaing FishBase from R. Journal of Fish Biology 81, 2030--2039. <https://doi.org/10.1111/j.1095-8649.2012.03464.x>
+
+Briere J-F, Pracros P, Le Roux A-Y, Pierre J-S. (1999) A novel rate model of temperature-dependent development in arthropods. Population Ecology, 28(1): 22-29. https://doi.org/10.1093/ee/28.1.22
 
 Brown JH, Gillooly JF, Allen AP, Savage VM, West GB. (2004) Toward a metabolic theory of ecology. Ecology, 85: 1771--1789. <https://doi.org/10.1890/03-9000>
 
