--- a/_posts/2022-11-30-dont-use-von-bertalanffy-growth-parameters/dont-use-von-bertalanffy-growth-parameters.Rmd
+++ b/_posts/2022-11-30-dont-use-von-bertalanffy-growth-parameters/dont-use-von-bertalanffy-growth-parameters.Rmd
@@ -6,7 +6,7 @@ description: |
 author:
   - name: Gustav Delius
     url: {}
-date: 30-11-2022
+date: 2022-11-30
 twitter:
   site: "@mizer_model"
   creator: "@gustavdelius"
@@ -22,9 +22,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ```{r}
-library(FSA)
 library(FSAdata)
-library(nlstools)
 library(tidyverse)
 ```
 
@@ -35,7 +33,7 @@ This blog post is not about criticising the von Bertalanffy growth model or the 
 A von Bertalanffy growth curve is an expression for the length $L$ of an average fish of age $a$:
 
 $$
-L(a) = L_\inf\left(1-e^{-K(a-t_0)}\right).
+L(a) = L_\infty\left(1-e^{-K(a-t_0)}\right).
 $$
 ```{r}
 length_vB <- function(age, Linf, K, t0) {
@@ -43,7 +41,7 @@ length_vB <- function(age, Linf, K, t0) {
 }
 ```
 
-The constants $L_\inf, K$ and $t_0$ are the von Bertalanffy growth parameters. They are usually obtained by fitting the von Bertalanffy curve to size-at-age data. This [fishR vignette](http://derekogle.com/fishR/examples/oldFishRVignettes/VonBertalanffy.pdf) gives a good introduction. The data consists of observations of the lengths and ages of a sample of fish. Here we illustrate this with the `Croaker2` data set contained in the FSAdata package:
+The constants $L_\infty, K$ and $t_0$ are the von Bertalanffy growth parameters. They are usually obtained by fitting the von Bertalanffy curve to size-at-age data. This [fishR vignette](http://derekogle.com/fishR/examples/oldFishRVignettes/VonBertalanffy.pdf) gives a good introduction. The data consists of observations of the lengths and ages of a sample of fish. Here we illustrate this with the `Croaker2` data set contained in the FSAdata package:
 
 ```{r}
 library(FSAdata)
@@ -56,9 +54,7 @@ df
 
 We now use the `nls()` function from R to do a least squares error fit of a von Bertalanffy curve to this data. The error is assumed to be a multiplicative error, i.e., an additive error in the log length.
 ```{r}
-start <- list(Linf = max(df$length),
-              K = 0.3,
-              t0 = 0)
+start <- list(Linf = max(df$length), K = 0.3, t0 = 0)
 nlsfit_length <- nls(log(length) ~ log(length_vB(age, Linf, K, t0)),
                      data = df,
                      start = start)
@@ -75,7 +71,44 @@ The blue curve is the von Bertalanffy curve. At each age it approximates the geo
 coef(nlsfit_length)
 ```
 
-The curve clearly does not extrapolate well to larval sizes as we can see from the large negative value of $t_0$. There are many issues that we could debate and that have been debated at length in the literature:
+Of course, the curve is only made to fit the data in the observed size range. The curve clearly does not extrapolate well to larval sizes as we can see from the large negative value of $t_0$. 
+
+### Fitting by hand
+
+It will be important later for us to understand what exactly we did when fitting the von Bertalanffy curve by the method of least squares. So instead of using the built-in `nls()` function, we are going to write our own function `sum_of_squares()` to calculate the sum of squares and then use `optim()` to find the parameters that minimise this.
+
+The sum of squares we are talking about here is the sum of the squares of the differences between the the observed log lengths and the log length predicted by the von Bertalanffy curve. So if we denote the length measurements by $L_i$ and the corresponding age measurements by $a_i$ then we want to minimise
+
+$$ \sum_i (\log(L_i) - \log(L(a_i)))^2$$
+
+where the sum is over all fish in our sample. We need to write a function that calculates this when given a vector with the parameters, so that `optim()` can use it:
+
+```{r}
+sum_of_squares <- function(par, df) {
+    Linf <- par[[1]]
+    K <- par[[2]]
+    t0 <- par[[3]]
+    sum((log(df$length) - 
+             log(length_vB(df$age, Linf, K, t0)))^2)
+}
+```
+
+We need to give an initial guess for the parameters to `optim`, as well as lower bounds on the parameter values. 
+```{r}
+start <- list(Linf = 400, K = 0.3, t0 = 0)
+lower <- list(Linf = 0, K = 0.01, t0 = -4)
+```
+It does not matter too much what the initial guess is. The lower bound is needed to keep the optimizer from trying negative values for $K$. Now we can call `optim()`:
+
+```{r}
+op <- optim(start, fn = sum_of_squares, 
+            df = df, lower = lower, 
+            method = "L-BFGS-B")
+op$par
+```
+
+
+There are many issues that we could debate and that have been debated at length in the literature:
 
 1. Is the von Bertalanffy growth model the best growth model.
 2. How reliably can the growth can be estimated from the size-at-age data.
@@ -83,19 +116,93 @@ The curve clearly does not extrapolate well to larval sizes as we can see from t
 
 But none of these are our topic. We will assume that the von Bertalanffy curve gives an appropriate representation of the length at age of an average fish of that age. 
 
-## Growth rate from slope of growth curve
+While we gave the von Bertalanffy curve in terms of length, it can equally easily be written it terms of weight if we assume a length-weight relationship of the form
+
+$$ w = a L^b.$$
+
+Then
+
+$$
+w = w_\infty\left(1-e^{-K(a-t_0)}\right)^b
+$$
+
+with the same parameters $K$ and $t_0$ and $w_\infty = aL_\infty^b$.
+
+## Age-based growth rate
 
 The slope of the von Bertalanffy curve at age $a$ gives the average growth rate of fish of that age:
 
-$$\frac{dL(a)}{da}=K\, L_\inf\, e^{-K(a-t_0)}$$
+$$\frac{dL(a)}{dt}=\frac{dL(a)}{da}=K\, L_\infty\, e^{-K(a-t_0)}
+= K(L_\infty - L(a)).$$
+(We used that time $t$ and age $a$ increase together, $da/dt=1$.)
 
-This is useful information in age-based population models. The point we want to make in this blog post is that it is not useful in size-based models like mizer.
+The important point to understand is that this is the growth rate as a function of age. The length $L(a)$ that enters the expression is the average length of fish of age $a$. This is useful information in age-based population models. It is not useful in size-based models like mizer.
+
+
+## Size-based growth rate
+
+Sometimes we need the average growth rate for fish of some given length $L$. Assume for example that we want to estimate the productivity of a population and have only information about the size distribution of the population. Such size data is often more readily available than age data because length or weight measurements are easy while age determination is difficult and time consuming. If we have the average growth rate of fish as a function of size then we can multiply that by the abundance of fish of that size and sum over all sizes to get the total productivity.
+
+More relevantly to us, the mizer model is a size-based model that uses the growth rate as a function of size to determine project the size distribution into the future. Mizer of course can calculate this growth rate itself with its `getEGrowth()` function. However it would be good if one had an observed growth rate to compare to to calibrate the species parameters in mizer that influence the mizer growth rate.
+
+One might think that the above equation also gives an expression for the average growth rate for fish of length $L$. Can't we simply replace the $L(a)$ by $L$? 
+
+$$\frac{dL}{dt} \stackrel{?}{=} K(L_\infty - L).$$
+
+We can't. If we try that, then at all $L$ above $L_\infty$ the formula gives a negative growth rate. But that is not how fish work. Fish that are lucky enough to grow beyond the average asymptotic size $L_\infty$ are not compelled to shrink back to average size.
+
+What we need to realise is that in fitting the von Bertalanffy curve to the size-at-age data we did not treat size and age equally. Rather we chose to average over all size at fixed age. From that averaged data we can not reconstruct the information about what happens at a specific size.
 
 ## Size-based growth curve
 
-The von Bertalanffy curve is an age-based growth curve in the sense that at each age it approximates the average length of all the fish of that age. Its slope gives the average growth rate as a function of age.
+We now understand that from a curve describing the average size of all fish of a certain age we can not deduce the average age of all fish of a certain size and hence we can not use it to determine the growth rate as a function of size. What we need is a curve describing the average age of all fish of a certain size. Let's refer to that as a size-based growth curve as opposed to an age-based growth curve.
 
-What mizer works with and calculates with the `getEGrowth()` function is the average growth rate as a function of size. So we want size to be on the x axis. This flips the point cloud on its side:
+Now we want to discuss how we can determine a size-based growth curve from size-at-age data. This should be possible. If the size-at-age data comes from a random sample of fish for each of which its size and age were measured, then the data treats size and age the same. It was our least squares fit that singled out age as the explanatory variable and size as the variable to average over. We now simply have to reverse the roles.
+
+We'll again try the von Bertalanffy growth model. But instead of choosing the parameters to minimize the sum of squares of the difference between the observed log lengths and the log lengths predicted by the von Bertalanffy growth model, we minimize the sum of squares of the difference between the observed ages and the predicted ages. 
+
+From the von Bertalanffy expression for length at age we can derive the corresponding expression for age at length:
+
+$$
+a(L) = -\frac{1}{K}\log\left(1-\frac{L}{L_\infty}\right) + t_0.
+$$
+
+This expression blows up at $L = L_\infty$ because in this use of the formula $L_\infty$ responds to the largest possible length of any fish. Even if a fish lived for an infinite amount of time it would not grow beyond $L_\infty$. Dealing with that singularity in the expression numerically would be challenging, so we acknowledge that fish are never going to live infinitely long and therefore $L$ will never quite reach $L_\infty$ and so we can cut of the curve when $L$ gets sufficiently close to $L_\infty$.
+
+```{r}
+age_vB <- function(L, Linf, K, t0) {
+    r <- pmin(L / Linf, 0.999999)
+    -log(1 - r) / K + t0
+}
+```
+
+The function calculating the sum of squares is now
+```{r}
+sum_of_squares <- function(par, df) {
+    Linf <- par[[1]]
+    K <- par[[2]]
+    t0 <- par[[3]]
+    sum((df$age - age_vB(df$length, Linf, K, t0))^2)
+}
+```
+
+```{r}
+start <- list(Linf = max(df$length) * 1.2, K = 0.3, t0 = 0)
+lower <- list(Linf = 0, K = 0.01, t0 = -40)
+op <- optim(start, fn = sum_of_squares, df = df, 
+            lower = lower, method = "L-BFGS-B")
+op$par
+```
+
+```{r}
+ggplot(df) +
+    geom_jitter(aes(x = age, y = length)) +
+    geom_function(fun = length_vB, args = as.list(op$par),
+                  linewidth = 2, colour = "blue") +
+    scale_y_log10()
+```
+
+So we want size to be on the x axis. This flips the point cloud on its side:
 
 ```{r}
 ggplot(df) +
@@ -108,20 +215,17 @@ The length-based growth curve would now be a curve $a(L)$ approximating at each 
 
 
 ```{r}
+
 ggplot(df) +
     geom_jitter(aes(x = length, y = age)) +
     geom_function(fun = age_vB, args = as.list(coef(nlsfit_length))) +
     scale_x_log10()
 ```
 
-## Fitting mean age
+
 
 ```{r}
-age_vB <- function(L, Linf, K, t0) {
-    r <- pmin(L / Linf, 0.99999)
-    -log(1 - r) / K + t0
-}
-start <- list(Linf = max(df$length),
+start <- list(Linf = max(df$length) * 1.1,
               K = 0.1,
               t0 = 0)
 nlsfit_age <- nls(age ~ age_vB(length, Linf, K, t0),
@@ -144,19 +248,4 @@ ggplot(df) +
     scale_x_log10()
 ```
 
-
-
-## Do it by hand:
-```{r}
-ss <- function(par, df) {
-    Linf <- par[[1]]
-    K <- par[[2]]
-    t0 <- par[[3]]
-    sum((df$length - Linf * (1 - exp(-K * (df$age - t0))))^2)
-}
-initial <- list(Linf = max(df$length), K = 0.3, t0 = 0)
-lower <- list(Linf = 0, K = 0.01, t0 = -2)
-op <- optim(initial, fn = ss, df = df, lower = lower, method = "L-BFGS-B")
-op
-```
 
